--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
   height: 80%;
   margin: auto;
   min-height: 512px;
-  box-shadow: 0px 35px 70px 0px rgba(255, 163, 125, 0.65), 0px 30px 40px -10px rgba(255, 100, 124, 0.55);
-  background: linear-gradient(180deg, rgba(255, 163, 125, 1) 0%, rgba(255, 99, 124, 1) 100%);
+  box-shadow: 0px 35px 70px 0px rgba(176, 170, 255, 0.65), 0px 30px 40px -10px rgba(252, 40, 181, 0.55);
+  background: linear-gradient(180deg, rgb(138, 125, 255) 0%, rgb(245, 125, 145) 100%);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
